Fix popup not showing correctly

--- a/content/content.css
+++ b/content/content.css
@@ -1,13 +1,7 @@
 #borang-div {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  align-items: center;
+  justify-content: center;
   position: fixed;
   top: 40%;
   right: 0;
@@ -17,11 +11,9 @@
   color: white;
   text-align: center;
   font-size: 1.2rem;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 600;
   border-radius: 5px;
-  -webkit-transition: 0.5s;
   transition: 0.5s;
   z-index: 9999;
-}
-/*# sourceMappingURL=content.css.map */
+}/*# sourceMappingURL=content.css.map */
