--- a/popup/popup.scss
+++ b/popup/popup.scss
@@ -3,10 +3,11 @@ $red: #ed4d6e;
 
 body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  width: 300px;
 }
 
 a {
-	text-decoration: none;
+  text-decoration: none;
 }
 
 .center {
